my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EBITRO_1/EBITRO_1.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBITRO_1.dml:14:9: error EBITRO: bit range of field 'b.r.f2' overlaps with field 'b.r.f1'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBITRO_1.dml:12:9: field b.r.f1 defined here
